Pt - Matching Commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #db ??? ??. ?? ??? ?? ? ??
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #chatgpt API??
 openai.model=gpt-3.5-turbo
@@ -40,4 +40,8 @@ spring.profiles.active=prod
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
+cloud.aws.s3.bucket=${AWS_BUCKET_NAME}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
