--- a/build.gradle
+++ b/build.gradle
@@ -24,44 +24,52 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Spring Boot Starters
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+	implementation 'org.springframework:spring-tx'
+
+	// AWS
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// Database
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
-	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.3'
-
-
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// Validation
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.0.Final'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
+
+	// Utils
+	implementation 'org.modelmapper:modelmapper:3.1.1'
+
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-	// Swageer
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
-
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
-	implementation 'org.hibernate.validator:hibernate-validator:7.0.0.Final' // 적절한 버전으로 변경하세요
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.0' // 적절한 버전으로 변경하세요
-	implementation 'org.modelmapper:modelmapper:3.1.1'  // 최신 버전 사용
-
-
 }
 
 test {
 	enabled = false
 }
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
